<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budget Notebook</string>
    <string name="action_settings">Settings</string>
    
    <string name="view_account">VIEW ACCOUNTS</string>
    <string name="add_transaction">ADD TRANSACTION</string>
    <string name="view_profile">MY PROFILE</string>
    <string name="view_goals">VIEW GOALS</string>
    <string name="view_recommendations">VIEW RECOMMENDATIONS</string>
    <string name="exit">EXIT</string>
    <string name="add_account">ADD ACCOUNT</string>
	<string name="pick_scope">Pick the Scope of your Update:</string>
    
	<color name="normal_balance">#006400</color>
	<color name="below_threshhold">#DAA520</color>
	<color name="below_zero">#FF0000</color>
	
	<string-array name="scope_array">
	    <item>This Instance</item>
	    <item>All Instances</item>
	    <item>All Subsequent Instances</item>
	</string-array>
	
    <string-array name ="goalTypeArray">
        <item>Save DELTA Amount.</item>
        <item>Pay off DELTA Amount.</item>
        <item>Do not Spend more than DELTA.</item>
    </string-array>
    
    <string-array name ="transIntArray">
        <item>One Time</item>
        <item>Every Two Weeks</item>
        <item>Every Month</item>
        <item>Every Year</item>
    </string-array>
    
    <string-array name ="transCatArray">
        <item>Income - Wages</item>
        <item>Income - Interest / Dividends</item>
        <item>Income - Other</item>
        <item>Expense - Home</item>
        <item>Expense - Daily Living</item>
        <item>Expense - Transportation</item>
        <item>Expense - Entertainment</item>
        <item>Expense - Health</item>
        <item>Expense - Vacation</item>
        <item>Expense - Recreation</item>
        <item>Expense - Dues / Subscriptions</item>
        <item>Expense - Personal</item>
        <item>Expense - Obligation</item>
        <item>Expense - Other</item>
    </string-array>
    
    <string name="title_activity_import">ImportActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="account">Account</string>
    <string name="view_reports">VIEW REPORTS</string>
    <string name="export_transactions">EXPORT TRANSACTIONS</string>
    <string name="import_transactions">IMPORT TRANSACTIONS</string>
    <string name="view_upcoming_alerts">VIEW UPCOMING ALERTS</string>
    <string name="item_">Item:</string>
    <string name="file_path_">File Path:</string>
    <string name="start_exporting">START EXPORTING</string>
    <string name="account_name_">Account Name:</string>
    <string name="account_no_">Account No.:</string>
    <string name="account_type_">Account Type:</string>
    <string name="beginning_balance_">Beginning Balance:</string>
    <string name="chk">CHK</string>
    <string name="sav">SAV</string>
    <string name="cr">CR</string>
    <string name="save">Save</string>
    <string name="end_date">End Date: \u0020</string>
    <string name="delta_amount">Delta Amount</string>
    <string name="what_is_the_goal_value_">What is the Goal Value?</string>
    <string name="current_amount">Current Amount</string>
    <string name="_lt_will_show_current_account_balance_">&amp;lt;Will Show Current Account Balance></string>
    <string name="description">Description</string>
    <string name="describe_the_goal_">Describe The Goal.</string>
    <string name="cal">cal</string>
    <string name="city_">City:</string>
    <string name="birthday_dd_mm_yyyy_">Birthday:</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="gender_">Gender:</string>
    <string name="last_name_">Last Name:</string>
    <string name="first_name_">First Name:</string>
    <string name="e_mail_">E-Mail:</string>
    <string name="type">Type</string>
    <string name="goal_name">Goal Name</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="account_">Account:</string>
    <string name="date_">Date:</string>
    <string name="amount_">Amount:</string>
    <string name="category">Category</string>
    <string name="type_">Type:</string>
    <string name="interval_days_">Interval(days):</string>
    <string name="de">DE</string>
    <string name="file_directory_">File Directory:</string>
    <string name="file_name_">File Name:</string>
    <string name="import_csv_file">Import CSV File</string>
    <string name="advanced_menu">ADVANCED MENU</string>
    <string name="account_icon">account_icon</string>
    <string name="id">ID</string>
    <string name="account_name">Account Name</string>
    <string name="_">$</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_edit">account_edit</string>
    <string name="account_delete">account_delete</string>
    <string name="row_icon">row_icon</string>
    <string name="goalaccount_">GoalAccount!</string>
    <string name="goalid_">GoalID!</string>
    <string name="goaldescription_">GoalDescription!</string>
    <string name="goalname_">GoalName!</string>
    <string name="goaltype_">GoalType!</string>
    <string name="edit_goal_button">edit_goal_button</string>
    <string name="delete_goal_button">delete_goal_button</string>
    <string name="goalenddate_">GoalEndDate!</string>
    <string name="a_id">A_ID</string>
    <string name="goal_icon">goal_icon</string>
    <string name="amount">Amount</string>
    <string name="transaction_edit_button">transaction_edit_button</string>
    <string name="transaction_delete_button">transaction_delete_button</string>
    <string name="date">Date</string>
    <string name="transaction_icon">transaction_icon</string>
    <string name="category_">Category:</string>
    <string name="consider_cutting_back_spending_in_category_">"Consider cutting back spending in category: "</string>
    <string name="count_">Count:</string>
    <string name="percentage_">Percentage:</string>
    <string name="add_goal">ADD GOAL</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="category_count_percentage">Category  \u0020 \u0020 \u0020 \u0020 \u0020 Count \u0020 \u0020 \u0020 \u0020 \u0020 Percentage</string>
    <string name="category_amountC_percentage">Category  \u0020 \u0020 \u0020 \u0020 Amount(+) \u0020 \u0020 Percentage</string>
    <string name="category_amountD_percentage">Category  \u0020 \u0020 \u0020 \u0020 Amount(-) \u0020 \u0020 Percentage</string>
    <string name="start_date">Start Date:</string>
    <string name="alert_icon">alert_icon</string>
    <string name="alert_end">ALERT END DATE</string>
    <string name="alertName">ALERT NAME</string>
    <string name="alertDescrip">DESCRIPTION</string>

</resources>
