<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

                <Button
                    android:id="@+id/view_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/view_account" />
                
                <Button
                    android:id="@+id/add_transaction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_transaction" />
                
                <Button
                    android:id="@+id/view_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_profile" />
                
                <Button
                    android:id="@+id/view_goals"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_goals" />
                
                <Button
                    android:id="@+id/view_recommendations"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_recommendations" />
                
                <Button
                    android:id="@+id/exit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit" />
    </LinearLayout>

</TabHost>