<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:paddingRight="2dp"
                android:text="@string/account_name_" />

            <EditText
                android:id="@+id/accountEditName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxWidth="140sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingRight="2dp"
                android:text="@string/account_no_" />

            <EditText
                android:id="@+id/accountEditNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxWidth="140sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingRight="2dp"
                android:text="@string/account_type_" />

            <RadioGroup
                android:id="@+id/accountEditType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:orientation="horizontal"
                android:scaleType="fitXY" >

                <RadioButton
                    android:id="@+id/accountTypeChecking"
                    android:scaleX="0.666"
                    android:text="@string/chk" />

                <RadioButton
                    android:id="@+id/accountTypeSavings"
                    android:scaleX="0.666"
                    android:text="@string/sav" />

                <RadioButton
                    android:id="@+id/accountTypeCredit"
                    android:scaleX="0.666"
                    android:text="@string/cr" />
            </RadioGroup>
        </TableRow>

        <TableRow>

            <TextView
                android:paddingRight="2px"
                android:text="@string/beginning_balance_" />

            <EditText
                android:id="@+id/accountEditBalance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxWidth="140sp" />
        </TableRow>

        <Button
            android:id="@+id/accountButtonSave"
            style="@style/button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/styledbutton"
            android:text="@string/save" />
    </TableLayout>

</LinearLayout>