<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

              <TableLayout
            	android:id="@+id/details"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:paddingTop="4dp"
            	android:stretchColumns="1" >

            	<TableRow>
		<TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/first_name_" />
            		<EditText
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"
                		android:inputType="text"
            			android:id="@+id/profileFirstName"
            			android:maxWidth="140sp" />
            	</TableRow>
            	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/last_name_" />
            		<EditText
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:inputType="text"
              	android:id="@+id/profileLastName"
              	android:maxWidth="140sp" />
         	</TableRow>
	<TableRow>
                	<TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/gender_" />							           	
		<RadioGroup
                    	android:id="@+id/profileGender"
                    	android:orientation="horizontal"
                    	android:layout_span="2"
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"                        
                    	android:scaleType="fitXY" >
                    	<RadioButton
                        	android:id="@+id/profileMale"
                        	android:text="@string/m"/>
                    	<RadioButton
                        	android:id="@+id/profileFemale"
                        	android:text="@string/f"/>
                	</RadioGroup>
            	</TableRow>	
	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/birthday_dd_mm_yyyy_" />					
            		<TextView
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"                
            			android:id="@+id/profileBirthday"
            			android:maxWidth="140sp" />
            		<ImageButton
		            android:id="@+id/profileButtonCalendar"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/calendar_icon" 
		            android:contentDescription="@string/cal"/>
            	</TableRow>		
            	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/city_" />					
            		<EditText
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"  
                		android:inputType="text"              
            			android:id="@+id/profileCity"
            			android:maxWidth="140sp" />
            	</TableRow>		 
            	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/e_mail_" />					
            		<EditText
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"
                		android:inputType="textEmailAddress"                
            			android:id="@+id/profileEmail"
            			android:maxWidth="140sp" />
            	</TableRow>		                 
            	<Button
                	android:id="@+id/save_profile"
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:text= "@string/save"
                	android:background="@drawable/styledbutton"
    				style="@style/button_text"  />
    	</TableLayout>                        
</LinearLayout>