<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

              <TableLayout
            	android:id="@+id/details"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:paddingTop="4dp"
            	android:stretchColumns="1" >

            	<TableRow>
		<TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/first_name_" />
            		<TextView
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"
            			android:id="@+id/profileFirstName"
            			android:maxWidth="140sp" />
            	</TableRow>
            	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/last_name_" />
            		<TextView
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
              	android:id="@+id/profileLastName"
              	android:maxWidth="140sp" />
         	</TableRow>
	<TableRow>
                	<TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/gender_" />							           	
				<TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
              	android:id="@+id/profileGender"
              	android:maxWidth="140sp" />
            	</TableRow>	
	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/birthday_dd_mm_yyyy_" />					
            		<TextView
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"                
            			android:id="@+id/profileBirthday"
            			android:maxWidth="140sp" />
            	</TableRow>		
            	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/city_" />					
            		<TextView
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"                
            			android:id="@+id/profileCity"
            			android:maxWidth="140sp" />
            	</TableRow>		 
            	<TableRow>
            	    <TextView
                    	android:paddingRight="2dp"
                    	android:text="@string/e_mail_" />					
            		<TextView
                		android:layout_height="wrap_content"
                		android:layout_width="fill_parent"                
            			android:id="@+id/profileEmail"
            			android:maxWidth="140sp" />
            	</TableRow>		
               
            	<Button
            	    android:id="@+id/editProfile"
            	    style="@style/button_text"
            	    android:layout_width="fill_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@drawable/styledbutton"
            	    android:text="@string/edit_profile" />

    	</TableLayout>             
</LinearLayout>