<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#f0000000"
    android:orientation="vertical">

    		<Button
                android:background="@drawable/styledbutton"
                android:id="@+id/advancedReports"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text= "@string/view_reports"
                style="@style/button_text" />
    
            <Button
                android:background="@drawable/styledbutton"
                android:id="@+id/advancedRecommendations"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text= "@string/view_recommendations"
                style="@style/button_text" />
            
			<Button
                android:background="@drawable/styledbutton"
                android:id="@+id/advancedExportTransactions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text= "@string/export_transactions"
                style="@style/button_text" />
			
			<Button
                android:background="@drawable/styledbutton"
                android:id="@+id/advancedAlerts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text= "@string/view_upcoming_alerts"
                style="@style/button_text" />
			
 </TableLayout>