<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/alertIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/alert_icon" 
        android:padding="5dp"
        android:onClick="deleteAlertClickHandler"
        android:src="@drawable/alert_icon" />

    <TextView
        android:id="@+id/alertID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alertIcon"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/alertAccountID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alertID"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/alertName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/alertIcon"
        android:text="@string/alertName"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/alertEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/alertName"
        android:layout_toRightOf="@+id/alertIcon"
        android:text="@string/alert_end"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/alertDescrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/alertIcon"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/alertEndDate"
        android:layout_toRightOf="@+id/alertIcon"
        android:text="@string/alertDescrip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>