<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/startDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceSmall" >

    </TextView>

    <TextView
        android:id="@+id/tranViewSpinner"
        style="@android:style/Widget.Spinner"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:onClick="dateClickHandler" />
    </LinearLayout> 
   
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceSmall">

    </TextView>

    <TextView
        android:id="@+id/tranViewSpinnerEnd"
        style="@android:style/Widget.Spinner"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:onClick="dateClickHandlerEnd" />

</LinearLayout> 

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/accountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_" 
        android:textAppearance="?android:attr/textAppearanceSmall" >

    </TextView>
    <Spinner
        android:id="@+id/transAccountSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout> 
  
    
    <ListView
        android:id="@+id/listViewTrans"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33" >
    </ListView>

    <Button
        android:id="@+id/addTransaction"
        style="@style/button_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/styledbutton"
        android:text="@string/add_transaction" /> 

</LinearLayout> 